@@ -222,3 +222,4 @@ Since I first released this library, there's been quite a few people who have su
 * Pavel Forkert
 * Anthony Byram
 * Pete Deffendol
+* Eduardo Casanova
